Resolves: tdf#91403 no wrtshell during initial layout

(cherry picked from commit ff44502d836880d2bdb057e7fdfd9b5abeb87842)

(cherry picked from commit cf851cda7c943548d0ce60d0b4836ccbf6e76698)

Change-Id: I0d0b8027e07f9dc2dfff584abd026d1b496d93dd
Reviewed-on: https://gerrit.libreoffice.org/15933
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>