sw/source/ui/fldui/fldref.cxx
@@ -183,8 +183,11 @@ void SwFldRefPage::Reset(const SfxItemSet* )
 
     // fill up with the sequence types
     SwWrtShell *pSh = GetWrtShell();
-    if(!pSh)
+    if (!pSh)
         pSh = ::GetActiveWrtShell();
+
+    if (!pSh)
+        return;
 
     const sal_uInt16 nFldTypeCnt = pSh->GetFldTypeCount(RES_SETEXPFLD);
 
